Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/115_expecting2_given0.xi
f():int,int
{
    return
}
//@PRACOWNIA
//@should_not_typecheck
